<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">
    <EditText
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/cost_of_service"
            android:layout_height="wrap_content"
            android:layout_width="160dp"
            android:hint="@string/cost_of_service"
            android:inputType="number"/>
    <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cost_of_service"
            android:id="@+id/service_question"
            android:text="@string/how_was_the_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/service_question"
                android:id="@+id/radio_group_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        <RadioButton android:id="@+id/option_twenty_percent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/amazing_20"
        />
        <RadioButton android:id="@+id/option_eighteen_percent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/good_18"
        />
        <RadioButton android:id="@+id/option_fifteen_percent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/okay_service"
        />
    </RadioGroup>


    <Switch
            android:id="@+id/switch_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/round_up_tip"
    />
    <Button
            android:id="@+id/button_calculate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
    />
    <TextView
            android:id="@+id/text_tip_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_amount"
            tools:text="Tip Amount: $10"
    />
</androidx.constraintlayout.widget.ConstraintLayout>